	* Commented out the block that checks for Administrator permissions
	in 'rivendell-producer.nsi.in'.
2017-05-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.5.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs that caused 'FADEUP_GAIN' and 'FADEDOWN_GAIN' parameter
	values to fail to be preserved when editing a log.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Removed rdlibraryb(1) from the Windows installer.
	* Made rdlogeditb(1) a mandatory component in the Windows installer.
	* Added a desktop shortcut for rdlogeditb(1) in the Windows installer.
2017-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.6.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'INSTALL'.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused the Services list in the 'Add Log' dialog
	to be populated in reverse order.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused the Service name to default to the first
	entry on the list when doing a 'Save As' for a log.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'Edit Log' dialog that caused focus to be lost
	when clicking the 'Cut' or 'Delete' buttons.
2017-07-12 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 1.0.0.
2017-07-17 Fred Gleason <fredg@paravelsystems.com>
	* Added 'Run Length' counters to the Edit Log dialog.
2017-07-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/rdlogeditb/runlengthwidget.cpp' that caused
	a segfault when processing a log with no selected items.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/log.cpp' that caused newly inserted
	cart events to show a length value of '00:00'.
2017-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/transportbutton.cpp' that caused the
	Stop button to be the incorrect color.