@@ -334,3 +334,5 @@
 2017-07-18 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a bug in 'src/common/transportbutton.cpp' that caused the
 	Stop button to be the incorrect color.
+2017-07-18 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'Print' button to the Edit Log dialog.
